# hikma-health-server

./: .cta.json  .dockerignore  .env.example  .gitignore  .ignore  .prototools  Justfile  README.md  TODO.md  aiproxy.render.yaml  compose.yaml  kysely.config.ts  module-specs.md  oxlint.config.ts  package.json  playwright.config.ts  pnpm-lock.yaml  pnpm-workspace.yaml  render.yaml  tsconfig.json  tsconfig.options.json  types.d.ts  vite.config.ts  vitest.config.ts
.do/: deploy.template.yaml  server.yaml
.moon/: tasks.yml  toolchains.yml  workspace.yml
.server/: dockerManifest.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
apps/local-hub/src-tauri/: Cargo.toml  tauri.conf.json
apps/local-hub/src-tauri/benches/: crypto_bench.rs
apps/local-hub/src-tauri/icons/: icon.icns
apps/local-hub/src-tauri/proptest-regressions/: lib.txt
apps/local-hub/src-tauri/proptest-regressions/cloud_sync/: merge.txt
apps/local-hub/src-tauri/proptest-regressions/rpc/handlers/: forms.txt  patients.txt  prescriptions.txt  visits.txt
apps/local-hub/src-tauri/src/: lib.rs  main.rs  sync_utils.rs  test_utils.rs
apps/local-hub/src-tauri/src/api/: mod.rs  readme.md
apps/local-hub/src-tauri/src/cloud_sync/: merge.rs  mod.rs  peer.rs  pull.rs  push.rs
apps/local-hub/src-tauri/src/crypto/: jwt.rs  mod.rs  pairing.rs
apps/local-hub/src-tauri/src/migrations/: mod.rs
apps/local-hub/src-tauri/src/migrations/sql/: V20260101__create_initial_tables.sql
apps/local-hub/src-tauri/src/rpc/: auth.rs  mod.rs  procedures-readme.md
apps/local-hub/src-tauri/src/rpc/handlers/: appointments.rs  auth.rs  clinics.rs  data.rs  dispensing.rs  drugs.rs  forms.rs  inventory.rs  mod.rs  patients.rs  prescription_items.rs  prescriptions.rs  serde_flexible.rs  sync.rs  visits.rs
apps/local-hub/src-tauri/src/util/: db.rs
database/: config.ts  moon.yml  package.json  pg.kysely-codegen.json  server.kysely-codegen.json  tsconfig.build.json  tsconfig.json  web.kysely-codegen.json
db/: README.md  alembic-kysely-migrator.ts  migrations_log.csv  old.index.ts  old.migrate-to-latest.ts  schema.prisma  schema.sql  utils.ts
docs/: DEVELOPER.md
(+712 files in other folders)
