[package]
name = "hh-local-hub"
version = "0.1.0"
description = "Hikma Health Local sync hub for on premesis sync"
authors = ["3210jr", "mediabot"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "hh_local_hub_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
poem = { version = "3.1.12", features = ["rustls"] }
qrcode-generator = "5.0.0"
local-ip-address = "0.6.10"
polodb_core = "5.1.4"
parking_lot = "0.12.5"
crabtime = "1.1.4"
rustls = "0.23.36"
rustls-pemfile = "2.2.0"
rcgen = "0.14.7"
once_cell = "1.21.3"
tokio = { version = "1.49.0", features = ["sync", "rt", "macros", "fs", "time"] }
tauri-plugin-fs = "2"
rusqlite = { version = "0.32", features = ["bundled", "bundled-sqlcipher-vendored-openssl"] }
sea-query = "0.32"
refinery = { version = "0.8", features = ["rusqlite"] }
tauri-plugin-stronghold = "2"
flux-rs = { git  = "https://github.com/flux-rs/flux.git" }
proptest = "1.10.0"
ring = "0.17"
hex = "0.4"
argon2 = "0.5"
bcrypt = "0.18"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
x25519-dalek = { version = "2", features = ["static_secrets"] }
base64 = "0.22"
chrono = "0.4"
uuid = { version = "1", features = ["v7"] }
log = "0.4"
env_logger = "0.11"

[dev-dependencies]
tempfile = "3"
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "crypto_bench"
harness = false

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
